2002-09-16  Richard Henderson  <rth@redhat.com>

	* include/std/std_limits.h (__glibcpp_f32_denorm_min_bytes,
	__glibcpp_f32_has_denorm, __glibcpp_f64_denorm_min_bytes,
	__glibcpp_f64_has_denorm, __glibcpp_f80_denorm_min_bytes,
	__glibcpp_f80_has_denorm, __glibcpp_f96_denorm_min_bytes,
	__glibcpp_f96_has_denorm, __glibcpp_f128_denorm_min_bytes,
	__glibcpp_f128_has_denorm, __glibcpp_float_denorm_min_bytes,
	__glibcpp_float_has_denorm, __glibcpp_double_denorm_min_bytes,
	__glibcpp_double_has_denorm, __glibcpp_long_double_denorm_min_bytes,
	__glibcpp_long_double_has_denorm): Remove.
	(__glibcpp_float_denorm_min, __glibcpp_double_denorm_min,
	__glibcpp_long_double_denorm_min): Remove.
	(std::numeric_limits<float>::has_denorm): Use __FLT_DENORM_MIN__.
	(std::numeric_limits<float>::denorm_min): Likewise.
	(std::numeric_limits<double>): Similarly.
	(std::numeric_limits<long double>): Similarly.
	* src/limits.cc (__glibcpp_float_denorm_min,
	__glibcpp_double_denorm_min, __glibcpp_long_double_denorm_min): Remove.

2002-09-13  Andy Felt  <afelt@uwsp.edu>

	* docs/html/17_intro/howto.html:  Update link.

2002-09-13  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/run_doxygen:  Massage man page for Iterator_types.3.
	* docs/html/faq/index.html:  Whitespace fixes.

2002-09-12  Benjamin Kosnik  <bkoz@redhat.com>

	* libmath/Makefile.am (LIBTOOL): Use --tag CC always for this
	directory.
	* libmath/Makefile.in: Regenerate.
	* src/Makefile.am: Tweak comment.
	* src/Makefile.in: Regenerate.
	
	* config/locale/gnu/c_locale.h: Remove warnings.
	Inject __uselocale into __gnu_cxx.
	* config/locale/generic/c_locale.h: Match.
	
2002-09-11  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc (__convert_from_v): Remove.
	* config/locale/gnu/c_locale.h (__convert_from_v): Add.
	* config/locale/generic/c_locale.h (__convert_from_v): Add.	

2002-09-11  Paolo Carlini  <pcarlini@unitus.it>

        * include/bits/locale_facets.tcc (__convert_from_v):